@startuml
class Card {
    - String suit
    - String rank
    - CardSkin skin
    - ImageIcon image
    + Card(String rank, String suit, CardSkin skin)
    + String getSuit()
    + String getRank()
    + CardSkin getSkin()
    + ImageIcon getImage()
    + String toString()
    - ImageIcon loadAndResizeImage(String imagePath, int width, int height)
}

class CardSkin {
    - String skinName
    + CardSkin(String skinName)
    + String getSkinName()
    + String getImagePath(String rank, String suit)
}

class Deck {
    - List<Card> cards
    - CardSkin skin
    + Deck(CardSkin skin)
    + void shuffle()
    + Card drawCard()
    + int size()
    + List<Card> getCards()
    + void setSkin(CardSkin skin)
    + void reset()
    - void createDeck(CardSkin skin)
}

Card --> CardSkin
Deck --> Card
@enduml
